# subconvert

./: .gitignore  .gitmodules  CMakeLists.txt  README
doc/: authors.txt  branches.txt
src/: authors.h  converter.cpp  converter.h  git-monitor.cpp  gitutil.cpp  gitutil.h  main.cpp  status.h  submodule.cpp  svndump.cpp  system.hpp
